--- a/public_html/lab/button.html
+++ b/public_html/lab/button.html
@@ -6,11 +6,11 @@ and open the template in the editor.
 -->
 <html>
 	<head>
-		<title>TODO supply a title</title>
+		<title>Material like Button</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<script type="text/javascript" src="../includes/lib/jquery/jquery.js"></script>
+		<script type="text/javascript" src="../assets/jquery.js"></script>
 		<style>
 			:root {
 				--mouse-x: 50px;
@@ -44,6 +44,7 @@ and open the template in the editor.
 			button {
 				margin: 4px;
 				cursor: pointer;
+				outline: none;
 			}
 
 			button.btn {
